<resources>
	<string name="js_is_wiki" translatable="false">
        (function() {
            var isTW = (mta = document.getElementsByTagName(\"meta\")[\"application-name\"])!= null &amp;&amp; mta.content==\"TiddlyWiki\" || typeof(version) == \"object\" &amp;&amp; typeof(version.title) == \"string\";
            if (isTW &amp;&amp; typeof(version) == \"undefined\" &amp;&amp; $tw.wiki == undefined) {
                document.body.addEventListener(\"DOMNodeInserted\", cbDecrypt = function () {
                    if ((arg0 = arguments[0].srcElement.classList) != undefined &amp;&amp; arg0.value==\" tc-page-container-wrapper\") {
                        document.body.removeEventListener(\"DOMNodeInserted\", cbDecrypt);
                        window.twi.onDecrypted();
                    }
                });
            }
            return isTW;
        })();
    </string>
	<string name="js_is_classic" translatable="false">
        (function() {
            var classic = typeof(version) == \"object\" &amp;&amp; typeof(version.major) == \"number\";
            if (classic) {
                window.saveFile = function(path,text) {
                    window.twi.saveFile(path,text);
                    return true;
                }
            }
            return classic;
        })();
    </string>
	<string name="js_exit" translatable="false">
        (function() {
            return $tw.saverHandler != undefined &amp;&amp; $tw.saverHandler.isDirty();
        })();
    </string>
	<string name="js_exit_c" translatable="false">
        (function() {
            return (store.isDirty() || story.areAnyDirty());
        })();
    </string>
	<string name="js_import" translatable="false">
        (function() {
            var w0 = $tw.wiki.makeWidget($tw.wiki.parseText(\'text/vnd.tiddlywiki\', \'
                &lt;$navigator story=\"$:/StoryList\" history=\"$:/HistoryList\" /&gt;
                \', {parentWidget: $tw.rootWidget, document: document}), {parentWidget: $tw.rootWidget, document: document, variables: {}});
            w0.render(document.createElement(\'div\'),null);
            var blocks = %1$s, nBlocks = [];
            blocks.forEach(function(b) {
                $tw.wiki.deserializeTiddlers(b.type, b.text, {title: b.title}).forEach(function(m) {
                    nBlocks.push(m);
                });
            });
            w0.children[0].children[0].dispatchEvent({type: \'tm-import-tiddlers\', param: JSON.stringify(nBlocks)});
        })();
    </string>
	<string name="js_new_tiddler" translatable="false">
        (function() {
            var w0 = $tw.wiki.makeWidget($tw.wiki.parseText(\'text/vnd.tiddlywiki\', \'
                &lt;$navigator story=\"$:/StoryList\" history=\"$:/HistoryList\" /&gt;
                \', {parentWidget: $tw.rootWidget, document: document}), {parentWidget: $tw.rootWidget, document: document, variables: {}});
            w0.render(document.createElement(\'div\'),null);
            var block = %1$s;
            w0.children[0].children[0].dispatchEvent({type: \'tm-new-tiddler\', param: {text: block.text}});
        })();
    </string>
	<string name="js_new_tiddler_c" translatable="false">
        (function() {
            var block = %1$s;
            ({
                fn: config.macros.newTiddler.onClickNewTiddler,
                getAttribute: function(attr) {
                    return this.sets[attr];
                },
                sets: {
                    \"newTitle\": config.macros.newTiddler.title,
                    \"newTemplate\": DEFAULT_EDIT_TEMPLATE,
                    \"newText\": block.text,
                },
            }).fn();
        })();
    </string>
	<string name="js_get_selected" translatable="false">
        (function() {
            return window.getSelection().toString();
        })();
    </string>
	<string name="js_pop" translatable="false">
        (function() {
            new $tw.Story().navigateTiddler(\"%1$s\");
        })();
    </string>
	<string name="js_settings_c" translatable="false">
        (function() {
            setOption(\"chkSaveBackups\",false);
        })();"
    </string>
	<string name="js_settings_c2" translatable="false">
        (function() {
            readOnly = false;
            backstage.init();
            refreshAll();
            story.refreshAllTiddlers();
        })();
    </string>
	<string name="js_print" translatable="false">
        (function() {
            window.print = function() {
                window.twi.print();
            }
        })();
    </string>
	<string name="js_save" translatable="false">
        (function() {
            $tw.saverHandler.saveWiki();
        })();
    </string>
	<string name="js_save_c" translatable="false">
        (function() {
            saveChanges();
        })()
    </string>
	<string name="js_info" translatable="false">
        (function() {
            if (undefined == $tw.wiki) {
                return [document.title, \"\", \"enc\", \"enc\", \"enc\"]
            }
            var tl_title = $tw.wiki.getTiddlerText(\"$:/SiteTitle\");
            var tl_sub = $tw.wiki.getTiddlerText(\"$:/SiteSubtitle\");
            var tl_c_hex = \"\";
            var tl_tb_conf = $tw.wiki.getTiddlerText(\"$:/config/Tiddloid/HideToolbar\");
            var tl_tb_hide = tl_tb_conf != null ? tl_tb_conf : \"no\";
            var tl_apply_color = $tw.wiki.getTiddlerText(\"$:/config/Tiddloid/ApplyTheme\");;
            if (\"yes\" == tl_apply_color || \"l_d\" == tl_apply_color) {
                var tl_c_map = $tw.utils.parseFields($tw.wiki.getTiddlerText($tw.wiki.getTiddlerText(\"$:/palette\")));
                var tl_color = tl_c_map[\"page-background\"];
                if (tl_color != undefined) {
                    while (tl_color.indexOf(\"&lt;&lt;colour\") == 0) {
                        tl_color = tl_c_map[tl_color.substr(9, tl_color.lastIndexOf(\"&gt;&gt;\") - 9)];
                        if (tl_color == undefined) {
                             tl_color = \"\";
                        }
                    }
                    if (tl_color.indexOf(\"rgb(\") == 0) {
                        var tl_c_o = 4;
                        var tl_c_p = tl_color.indexOf(\",\",tl_c_o);
                        var tl_c_red = tl_color.substring(tl_c_o,tl_c_p);
                        tl_c_o = tl_c_p + 1;
                        tl_c_p = tl_color.indexOf(\",\",tl_c_o);
                        var tl_c_green = tl_color.substring(tl_c_o,tl_c_p);
                        tl_c_o = tl_c_p + 1;
                        tl_c_p = tl_color.indexOf(\")\",tl_c_o);
                        var tl_c_blue = tl_color.substring(tl_c_o,tl_c_p);
                        tl_c_pre = \"#\";
                        tl_color = tl_c_pre.concat(Number.parseInt(tl_c_red).toString(16),Number.parseInt(tl_c_green).toString(16),Number.parseInt(tl_c_blue).toString(16));
                    }
                    tl_c_hex = \"l_d\" == tl_apply_color ? tl_color.replace(\"#\", \"$\") : tl_color;
                }
            }
            var tl_fic = $tw.wiki.getTiddlerText(\"$:/favicon.ico\");
            var tl_favicon = tl_fic != null ? tl_fic : \"\";
            var tl_ca = $tw.wiki.getTiddlerText(\"$:/config/Tiddloid/CustomActions.json\");
            var tl_mt = $tw.config.contentTypeInfo;
            var tl_dt = Object.keys($tw.Wiki.tiddlerDeserializerModules);
            var tl_pv = $tw.wiki.getTiddler(\"$:/plugins/tiddlywiki/tiddloid-tweaks\");
            tl_pv = tl_pv == undefined ? \"\" : tl_pv.fields.version;
            return [tl_title, tl_sub, tl_tb_hide, tl_c_hex, tl_favicon, tl_ca, tl_mt, tl_dt, tl_pv];
        })();
    </string>
	<string name="js_info_c" translatable="false">
        (function() {
            var tl_title =  store.getTiddlerText(\"SiteTitle\");
            var tl_subtitle = store.getTiddlerText(\"SiteSubtitle\");
            var tl_fic = store.getTiddlerText(\"favicon.ico\");
            var tl_favicon = tl_fic != null ? tl_fic : \"\";
            return [tl_title, tl_subtitle, \"no\", \"\", tl_favicon, \"\"]
        })();
    </string>
	<string name="app_name" translatable="false">Tiddloid</string>
	<string name="entry_name">Add to Tiddloid</string>
	<string name="tiddlywiki" translatable="false">TiddlyWiki</string>
	<string name="plugin_version" translatable="false">1.2.0</string>
	<string name="logo" translatable="false">logo</string>
	<string name="filter" translatable="false">filter</string>
	<string name="filter_time">Filter by date</string>
	<string name="filter_time_init" translatable="false">...</string>
	<string name="filter_time_sep" translatable="false">-</string>
	<string name="path" translatable="false">path</string>
	<string name="icon" translatable="false">icon</string>
	<string name="rollback" translatable="false">rollback</string>
	<string name="del_backup" translatable="false">del_backup</string>
	<string name="update_api">https://api.github.com/repos/donmor/Tiddloid/releases/latest</string>
	<string name="update_api_f_droid" translatable="false">https://f-droid.org/api/v1/packages/top.donmor.tiddloid</string>
	<string name="update_url">https://github.com/donmor/Tiddloid/releases/latest</string>
	<string name="update_url_f_droid" translatable="false">https://f-droid.org/packages/top.donmor.tiddloid/</string>
	<string name="template_repo">https://tiddlywiki.com/empty.html</string>
	<string name="action_new">New TiddlyWiki file</string>
	<string name="action_import">Import a TiddlyWiki file</string>
	<string name="action_dir">Add a TiddlyWiki folder</string>
	<string name="action_filter">Filter</string>
	<string name="action_about">About Tiddloid</string>
	<string name="action_update">Update available: %1$s</string>
	<string name="action_save_to">Save to Tiddloid</string>
	<string name="action_save_to_file">Save as a new file</string>
	<string name="action_save_to_link">Save as a bookmark</string>
	<string name="action_save">Save changes</string>
	<string name="context_new_tiddler">New Tiddler here</string>
	<string name="context_find">Find</string>
	<string name="context_save">Save</string>
	<string name="find_find">Find</string>
	<string name="find_close">Close</string>
	<string name="find_down">Down</string>
	<string name="find_up">Up</string>
	<string name="no_permission">Unable to get filesystem permissions</string>
	<string name="no_wiki">There is nothing here</string>
	<string name="provider">Source:&#160;</string>
	<string name="pathDir">Path:&#160;</string>
	<string name="internet">Internet</string>
	<string name="local_legacy">Local (Legacy)</string>
	<string name="unknown">Unknown</string>
	<string name="default_wiki">Default Wiki</string>
	<string name="default_wiki_needed">Please set a default Wiki</string>
	<string name="stay_in_background">Stay in background</string>
	<string name="plugin_auto_update">Tweaks plugin auto-update</string>
	<string name="enable_backup">Enable backup</string>
	<string name="no_backups">No backups</string>
	<string name="create_shortcut">Create a shortcut</string>
	<string name="shortcut_created">Shortcut successfully created</string>
	<string name="shortcut_failed">Failed to create shortcut</string>
	<string name="clone_wiki">Clone</string>
	<string name="remove_wiki">Remove</string>
	<string name="server_error">Unable to connect to the server</string>
	<string name="download_failed">Download failed</string>
	<string name="please_wait">Please wait&#8230;</string>
	<string name="show_hidden_files">Show hidden files</string>
    <string name="action_sc_s_new">New</string>
    <string name="action_sc_s_default">Default</string>
    <string name="delete">Delete</string>
    <string name="http_has_credential">HTTP credential stored</string>
	<string name="failed">Failed</string>
	<string name="cancelled">Cancelled</string>
	<string name="wiki_replaced">Existing Wiki Overwritten</string>
	<string name="file_deleted">File deleted</string>
</resources>