<?xml version="1.0" encoding="utf-8"?><!--
  ~ /home/donmor/AndroidStudioProjects/Tiddloid/app/src/main/res/layout/wikiconfig_dialog.xml <= [P|Tiddloid]
  ~ Last modified: 21:46:01 2024/02/14
  ~ Copyright (c) 2024 donmor
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:animateLayoutChanges="true"
	android:layoutDirection="inherit"
	android:orientation="vertical"
	android:paddingStart="20dp"
	android:paddingEnd="20dp">

	<TextView
		android:id="@+id/textWikiConfigPath"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="6dp"
		android:contentDescription="@string/path"
		android:textAppearance="@style/TextAppearance.AppCompat.Small" />

	<CheckBox
		android:id="@+id/cbDefault"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/default_wiki"
		tools:ignore="TouchTargetSizeCheck" />

	<CheckBox
		android:id="@+id/cbStayBackground"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/stay_in_background"
		tools:ignore="TouchTargetSizeCheck" />

	<CheckBox
		android:id="@+id/cbPluginAutoUpdate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/plugin_auto_update"
		tools:ignore="TouchTargetSizeCheck" />

	<LinearLayout
		android:id="@+id/rowCredential"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_weight="1"
			android:text="@string/http_has_credential"
			android:textAppearance="@style/MenuTextAppearance"
			android:textColor="?android:attr/colorFocusedHighlight"
			tools:ignore="TextContrastCheck,TextSizeCheck" />

		<Button
			android:id="@+id/delete_credential"
			style="@style/Widget.AppCompat.Button.Small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minHeight="10dp"
			android:text="@string/delete"
			tools:ignore="TouchTargetSizeCheck" />
	</LinearLayout>

	<CheckBox
		android:id="@+id/cbBackup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/enable_backup"
		tools:ignore="TouchTargetSizeCheck" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/frmBackupList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="4dp"
		android:orientation="vertical"
		android:visibility="visible">

		<TextView
			android:id="@+id/lblNoBackup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/no_backups"
			android:textAlignment="center"
			app:layout_constraintBottom_toTopOf="@id/rvBackupList" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvBackupList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintHeight_max="240dp"
			app:layout_constraintTop_toBottomOf="@id/lblNoBackup" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
